force-app/main/default/objects/DocumentListItem__c/DocumentListItem__c.object-meta.xml
<CustomObject>
    <description>Item of the documents list</description>
    <label>Document List Item</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document List Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>