force-app/main/default/objects/DocumentListItem__c/fields/CheckboxField__c.field-meta.xml
<CustomField>
    <fullName>CheckboxField__c</fullName>
    <description>Api Name of the Checkbox field that is checked when the document is uploaded</description>
    <inlineHelpText>Api Name of the Checkbox field that is checked when the document is uploaded</inlineHelpText>
    <label>Checkbox Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>