force-app/main/default/objects/DocumentListItem__c/fields/DocumentList__c.field-meta.xml
<CustomField>
    <fullName>DocumentList__c</fullName>
    <label>Document List</label>
    <referenceTo>DocumentList__c</referenceTo>
    <relationshipLabel>Document List Items</relationshipLabel>
    <relationshipName>ListItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>