force-app/main/default/objects/DocumentListItem__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Represents the order of the document in the list.</description>
    <inlineHelpText>Represents the order of the document in the list.</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>